--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "file-loader": "^0.9.0",
     "material-ui": "^1.0.0-beta.47",
     "prop-types": "^15.5.9",
-    "react": "^15.0.2",
-    "react-dom": "^15.0.2",
+    "react": "^15.6.2",
+    "react-bootstrap": "^0.32.1",
+    "react-dom": "^15.6.2",
     "react-hot-loader": "^3.0.0-beta.2",
     "react-redux": "^4.4.5",
     "react-router-dom": "^4.1.1",
@@ -31,7 +32,7 @@
     "redux": "^3.5.2"
   },
   "devDependencies": {
-    "autoprefixer": "^6.3.6",
+    "autoprefixer": "^6.7.7",
     "babel-core": "^6.8.0",
     "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
@@ -47,16 +48,16 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.16.1",
     "json-loader": "^0.5.4",
-    "node-sass": "^3.7.0",
+    "node-sass": "^3.13.1",
     "postcss-loader": "^0.9.1",
     "react-addons-test-utils": "^15.0.2",
     "redux-devtools": "^3.2.0",
     "redux-devtools-dock-monitor": "^1.1.1",
     "redux-devtools-log-monitor": "^1.0.11",
     "rimraf": "^2.5.2",
-    "sass-loader": "^3.2.0",
+    "sass-loader": "^3.2.3",
     "stats-webpack-plugin": "^0.3.1",
-    "style-loader": "^0.13.1",
+    "style-loader": "^0.13.2",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1"
