--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-redux": "^4.4.5",
     "react-router-dom": "^4.1.1",
     "react-router-redux": "next",
+    "react-transition-group": "^1.2.1",
     "redux": "^3.5.2",
     "redux-thunk": "^2.2.0"
   },
