--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.18.0",
     "bootstrap": "4.1.1",
     "file-loader": "^0.9.0",
+    "jwt-decode": "^2.2.0",
     "material-ui": "^1.0.0-beta.47",
     "prop-types": "^15.5.9",
     "react": "^15.6.2",
