--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "file-loader": "^0.9.0",
     "jwt-decode": "^2.2.0",
     "material-ui": "^1.0.0-beta.47",
+    "moment": "^2.22.2",
     "prop-types": "^15.5.9",
     "react": "^15.6.2",
     "react-bootstrap": "^0.32.1",
